(Raster)

allow iconbox menu to pop up wiht any button presses ont he iconbox border :)

-------------------------------------------------------------------------------

Thu Sep 16 17:10:27 PDT 1999
(Mandrake)

task list updates on new windows and old windows dying off in kpanel now (oops)

-------------------------------------------------------------------------------

Thu Sep 16 18:36:16 PDT 1999
(Mandrake)

closer to having the client titles show up in the taskbar.  at least the
desktops show up in the pager now.  (more kde work)

-------------------------------------------------------------------------------

Thu Sep 16 18:47:31 PDT 1999
(Mandrake)

well, it would HELP if I used XA_STRING on those :)
MOST of the taskbar works now.
still have to do updates of title setting KWM_WIN_TITLE.


-------------------------------------------------------------------------------

Thu Sep 16 18:59:43 PDT 1999
(Mandrake)

IMPORTANT TODO ITEM:   kde support and desktops other than 0 cause things to 
segfault.
Needs fixing.  BIG bug.  if you turn "kde off" in your eesh it will fix that,
or if you want kde support only use desktop 0 for now.  'nuff said.


-------------------------------------------------------------------------------

Fri Sep 17 08:57:02 PDT 1999
(Raster)

have erealloc call efree if size == 0 & ptr != NULL

if we change desktop area size - dont reshufle sticky windows... :)

-------------------------------------------------------------------------------

Fri Sep 17 09:43:01 PDT 1999
(Raster)

handle icon property change events properly and redraw iconbox if window 
iconfied.

fixed up 2 images in brushed metal theme + add right side pager border

-------------------------------------------------------------------------------

Fri Sep 17 11:29:07 PDT 1999
(KainX)

Changes to the memory allocation stuff to make it more portable and
such.  Account for all the different ways they could be called and
do the rerouting ourselves so we don't depend on the OS.